--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             </p>
 
             <p>
-                <input type="button" value="Verificar" onclick="verificar()">
+                <input type="button" value="VERIFICAR" onclick="verificar()">
             </p>
 
         </div>
